terraform/aws/k8s-manifests/16-langfuse-tls/1-langfuse-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-langfuse
  namespace: langfuse
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: langfuse.oceancloud.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: langfuse-web
                port:
                  number: 3000
  tls:
    - hosts:
        - langfuse.oceancloud.click
      secretName: langfuse-oceancloud-click
